--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
